--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- About -->
     <section id="about" class="light-section">
         <h2>About Me</h2>
-        <img src="/profilepic.jpg" alt="Chandan Gurung" class="profile-pic">
+        <img src="/profilepic.JPG" alt="Chandan Gurung" class="profile-pic">
         <p>I’m a results-driven <strong>Full Stack Java Developer</strong> with over 6 years of experience building scalable, secure, and high-performance applications for finance, healthcare, and enterprise systems. My expertise spans front-end and back-end development, cloud deployments, and agile delivery. I’m passionate about creating elegant solutions that solve complex problems and delivering value to end-users.</p>
         <p>Outside of coding, I enjoy exploring new cloud services, contributing to open-source projects, and mentoring aspiring developers.</p>
         <button id="moreBtn" class="btn">More about me</button>
