look at repo's index.html and adjusted images

--- a/projects/project1.html
+++ b/projects/project1.html
@@ -14,7 +14,7 @@
     </div>
     <nav>
         <ul>
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
         </ul>
     </nav>
 </header>
@@ -22,7 +22,7 @@
 <main class="project-detail">
     <section>
         <h2>Digital Banking and Investment Platform</h2>
-        <img src="../images/project1.png" alt="Digital Banking and Investment Platform Screenshot" class="project-img">
+        <img src="../images/project1.png" alt="Digital Banking and Investment Platform Screenshot" class="project-img" width="1200px" height="700px">
         <p>
             Designed and developed a scalable, cloud-native digital banking and investment platform for <strong>Global Finance Corp</strong>.
             Delivered secure customer portals, investment dashboards, and microservices-based backend for high-volume transactions.
