--- a/projects/project2.html
+++ b/projects/project2.html
@@ -14,7 +14,7 @@
     </div>
     <nav>
         <ul>
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
         </ul>
     </nav>
 </header>
@@ -22,7 +22,7 @@
 <main class="project-detail">
     <section>
         <h2>Healthcare Appointment and Billing System</h2>
-        <img src="../images/project2.png" alt="Healthcare Appointment and Billing System Screenshot" class="project-img">
+        <img src="../images/project2.png" alt="Healthcare Appointment and Billing System Screenshot" class="project-img" width="1200px" height="700px">
         <p>
             Delivered a responsive healthcare platform for <strong>HealthPlus Systems</strong> enabling patients to schedule appointments, receive reminders, and manage billing.
         </p>
