--- a/projects/project3.html
+++ b/projects/project3.html
@@ -14,7 +14,7 @@
     </div>
     <nav>
         <ul>
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
         </ul>
     </nav>
 </header>
@@ -22,7 +22,7 @@
 <main class="project-detail">
     <section>
         <h2>Employee Management and Reporting System</h2>
-        <img src="../images/project3.png" alt="Employee Management and Reporting System Screenshot" class="project-img">
+        <img src="../images/project3.png" alt="Employee Management and Reporting System Screenshot" class="project-img" width="1200px" height="700px">
         <p>
             Built a full-featured employee management and reporting solution for <strong>NextWave IT Solutions</strong> to streamline HR workflows and reporting.
         </p>
