--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- About -->
     <section id="about" class="light-section">
         <h2>About Me</h2>
-        <img src="images/profilepic.JPG" alt="Chandan Gurung" class="profile-pic">
+        <img src="images/profilepic.JPG" alt="Chandan Gurung" class="profile-pic" width="1200px" height="300px">
         <p>I’m a results-driven <strong>Full Stack Java Developer</strong> with over 6 years of experience building scalable, secure, and high-performance applications for finance, healthcare, and enterprise systems. My expertise spans front-end and back-end development, cloud deployments, and agile delivery. I’m passionate about creating elegant solutions that solve complex problems and delivering value to end-users.</p>
         <p>Outside of coding, I enjoy exploring new cloud services, contributing to open-source projects, and mentoring aspiring developers.</p>
         <button id="moreBtn" class="btn">More about me</button>
@@ -70,7 +70,7 @@
             </div>
         </div>
         <div class="project-card">
-            <img src="images/project2.png" alt="Healthcare System">
+            <img src="images/project2.png" alt="Healthcare System" width="1600px" height="300px">
             <div>
                 <h3>Healthcare Appointment & Billing System</h3>
                 <p>Delivered end-to-end patient appointment and billing platform using <strong>Spring MVC</strong> & <strong>Angular</strong>, integrated Stripe for payments, and AWS EC2 hosting.</p>
