--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <section id="about" class="light-section">
         <h2>About Me</h2>
         <img src="images/profilepic.JPG" alt="Chandan Gurung" class="profile-pic" width="1200px" height="300px">
-        <p class="center-text">I’m a results-driven <strong>Full Stack Java Developer</strong> with over 6 years of experience building scalable, secure, and high-performance applications for finance, healthcare, and enterprise systems. My expertise spans front-end and back-end development, cloud deployments, and agile delivery. I’m passionate about creating elegant solutions that solve complex problems and delivering value to end-users.</p>
-        <p>Outside of coding, I enjoy exploring new cloud services, contributing to open-source projects, and mentoring aspiring developers.</p>
+        <p class="justify-text">I’m a results-driven <strong>Full Stack Java Developer</strong> with over 6 years of experience building scalable, secure, and high-performance applications for finance, healthcare, and enterprise systems. My expertise spans front-end and back-end development, cloud deployments, and agile delivery. I’m passionate about creating elegant solutions that solve complex problems and delivering value to end-users.</p>
+        <p class="justify-text">Outside of coding, I enjoy exploring new cloud services, contributing to open-source projects, and mentoring aspiring developers.</p>
         <button id="moreBtn" class="btn">More about me</button>
         <div id="moreContent" style="display:none; margin-top:1rem;">
-            <p>
+            <p class="justify-text">
                 I specialize in designing cloud-native microservices, performance tuning, and automated CI/CD pipelines.
                 I mentor junior engineers and enjoy hands-on work with AWS ECS/EKS and container orchestration.
             </p>
@@ -65,7 +65,7 @@
             <img src="images/project1.png" alt="Digital Banking Platform">
             <div>
                 <h3>Digital Banking & Investment Platform</h3>
-                <p>Designed cloud-native microservices with <strong>Spring Boot</strong> and <strong>Hibernate</strong>, secure portals with <strong>React.js</strong>, and AWS ECS/EKS deployments. Improved backend latency by 35% with Redis caching and async messaging.</p>
+                <p class="justify-text">Designed cloud-native microservices with <strong>Spring Boot</strong> and <strong>Hibernate</strong>, secure portals with <strong>React.js</strong>, and AWS ECS/EKS deployments. Improved backend latency by 35% with Redis caching and async messaging.</p>
                 <a href="projects/project1.html" class="btn">View Details</a>
             </div>
         </div>
@@ -73,7 +73,7 @@
             <img src="images/project2.png" alt="Healthcare System" width="1600px" height="300px">
             <div>
                 <h3>Healthcare Appointment & Billing System</h3>
-                <p>Delivered end-to-end patient appointment and billing platform using <strong>Spring MVC</strong> & <strong>Angular</strong>, integrated Stripe for payments, and AWS EC2 hosting.</p>
+                <p class="justify-text">Delivered end-to-end patient appointment and billing platform using <strong>Spring MVC</strong> & <strong>Angular</strong>, integrated Stripe for payments, and AWS EC2 hosting.</p>
                 <a href="projects/project2.html" class="btn">View Details</a>
             </div>
         </div>
@@ -81,7 +81,7 @@
             <img src="images/project3.png" alt="Employee Management">
             <div>
                 <h3>Employee Management & Reporting System</h3>
-                <p>Built REST APIs and responsive UI with <strong>jQuery</strong> & <strong>Bootstrap</strong>, managed DB migrations with Liquibase, and deployed to Tomcat.</p>
+                <p class="justify-text">Built REST APIs and responsive UI with <strong>jQuery</strong> & <strong>Bootstrap</strong>, managed DB migrations with Liquibase, and deployed to Tomcat.</p>
                 <a href="projects/project3.html" class="btn">View Details</a>
             </div>
         </div>
